[package]
name = "noko"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/JakeEhrlich/noko"
readme = "README.md"
authors = ["Jake Ehrlich"]
repository = "https://github.com/JakeEhrlich/noko"
license = "MIT"
description = "A tool for viewing logs"
keywords = ["logging", "tracing", "search", "cli", "grep"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
