[package]
name = "noko"
version = "0.3.0"
edition = "2021"
homepage = "https://github.com/JakeEhrlich/noko"
readme = "README.md"
authors = ["Jake Ehrlich"]
repository = "https://github.com/JakeEhrlich/noko"
license = "MIT"
description = "A tool for viewing logs"
keywords = ["logging", "tracing", "search", "cli", "grep"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = { version = "0.9.2", default-features = false }
miette = { version = "5.9.0", default-features = false, features = ["fancy"] }
thiserror = "1.0.43"

[dev-dependencies]
insta = { version = "1.31.0", features = ["yaml"] }
proptest = "1.2.0"
